
syntax = "proto3";

package kubernetes;

option go_package="protos/protos";

import "generalView.proto";

message AuthorizationRequest {
  ClientRequest client_request = 1;
  string uid = 2;
}

service Authorization {
  rpc Authorize(AuthorizationRequest) returns (Response) {}
}
